[gd_scene load_steps=6 format=3 uid="uid://bciu7cpdtxolh"]

[ext_resource type="PackedScene" uid="uid://xqt5r4ullpk2" path="res://scenes/player_related/player.tscn" id="1_qssp3"]
[ext_resource type="Script" uid="uid://djsarg4hpqc1u" path="res://scenes/levels/hub.gd" id="1_ysqli"]
[ext_resource type="PackedScene" uid="uid://c3yfxx7avknuy" path="res://scenes/levels/exit_mirror.tscn" id="3_t8fgl"]
[ext_resource type="Texture2D" uid="uid://5dd0o7yh7hvn" path="res://final_art/enviornment/hub/mirrorBlank_fire.png" id="5_hgdgd"]
[ext_resource type="Texture2D" uid="uid://34xvtnj6nhlp" path="res://final_art/enviornment/hub/mirrorBlank_water.png" id="7_pu6vg"]

[node name="HUB" type="Node"]
script = ExtResource("1_ysqli")

[node name="FireMirror" parent="." instance=ExtResource("3_t8fgl")]
position = Vector2(464, 0)
metadata/_edit_group_ = true

[node name="Sprite2D" parent="FireMirror" index="0"]
texture = ExtResource("5_hgdgd")

[node name="WaterMirror" parent="." instance=ExtResource("3_t8fgl")]
position = Vector2(578, -2)
metadata/_edit_group_ = true

[node name="Sprite2D" parent="WaterMirror" index="0"]
texture = ExtResource("7_pu6vg")

[node name="player" parent="." instance=ExtResource("1_qssp3")]

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(524, 85)

[connection signal="interact" from="FireMirror" to="." method="_on_fire_mirror_interact"]
[connection signal="interact" from="WaterMirror" to="." method="_on_water_mirror_interact"]

[editable path="FireMirror"]
[editable path="WaterMirror"]
